# LampyEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  LampyEngine.cppcheck  LampyEngine.sln  README.md  buildDebug.bat  buildProject.bat  buildRelease.bat  clean.bat  commit_message.txt  compileShaders.bat  compile_commands.json  conanProfileBuildLinux  conanProfileDebugLinux  conanfile.py  conanfile.txt  fix_logger.py  gen.py  generateProjectFiles.bat  generateProjectFiles.sh  generate_project_files.bat  listing.bat  prod.py  runDebugTests.bat  runDebugTests.sh
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt  Engine.cpp  Engine.h  EngineConfig.h  main.cpp
Engine/Core/Shaders/: shader.vert
Engine/Editor/: Application.cpp  CMakeLists.txt  Editor.cpp  Editor.h  VulkanApplicationConfig.h  main.cpp
Engine/Editor/Modules/EditorGuiModule/: EditorConsole.cpp  EditorConsole.h  EditorGUIModule.cpp  EditorGUIModule.h  EditorScriptPanel.cpp  EditorScriptPanel.h  EditorToolPanel.cpp  EditorViewport.cpp  Events.h  MainMenuBar.cpp  MainMenuBar.h  OutputLog.cpp  OutputLog.h
Engine/Engine/: CMakeLists.txt  EngineMinimal.h
Engine/Engine/Core/: ContextLocator.h  CoreGlobal.h  CoreLocator.h  EventHelpers.h  IModule.h  ModuleEventBinder.h
Engine/Engine/Foundation/: Foundation.h
Engine/Engine/Foundation/Assert/: Assert.cpp  Assert.h
Engine/Engine/Foundation/Diagnostics/: ThreadDiagnostics.cpp  ThreadDiagnostics.h
Engine/Engine/Foundation/Event/: EventBus.h
Engine/Engine/Foundation/Filesystem/: DirectoryIterator.cpp  DirectoryIterator.h  Fs.cpp  Fs.h  FsTypes.h
Engine/Engine/Foundation/JobSystem/: JobSystem.cpp  JobSystem.h
Engine/Engine/Foundation/Log/: LogVerbosity.h  Logger.cpp  LoggerMacro.h
Engine/Engine/Foundation/Math/: Math.h
Engine/Engine/Foundation/Memory/: FreeListAllocator.h  IAllocator.h  LinearAllocator.h  (+7 more)
Engine/Engine/Runtime/: Application.cpp  Application.h  ModuleConfigRegistry.h  Runtime.h
Engine/EngineContext/: CMakeLists.txt  EngineContext.h  EngineMinimal.h  EnginePCH.h  IModule.h  ModuleManager.cpp  ModuleManager.h  ModuleRegistry.cpp  ModuleRegistry.h
Engine/EngineContext/Core/: Context.h  ContextLocator.h  Core.h  CoreGlobal.h  CoreLocator.h  ModuleEventBinder.h
Engine/EngineContext/Foundation/: Foundation.h
Engine/EngineContext/Runtime/: EngineContext.h
Engine/Modules/: CMakeLists.txt
Engine/Modules/AudioModule/: AudioModule.cpp  AudioModule.h  CMakeLists.txt
Engine/Modules/EditorGuiModule/: CMakeLists.txt  ContentBrowser.cpp  ContentBrowser.h  EditorConsole.cpp  EditorConsole.h  EditorGUIModule.cpp  EditorGUIModule.h  EditorScriptPanel.cpp  EditorScriptPanel.h  EditorToolPanel.cpp  EditorToolPanel.h  EditorViewport.cpp  EditorViewport.h  Events.h  MainMenuBar.cpp  MainMenuBar.h  OutputLog.cpp  OutputLog.h  WorldInspector.cpp  WorldInspector.h
Engine/Modules/EventModule/: CMakeLists.txt  Event.h
Engine/Modules/FilesystemModule/: CMakeLists.txt  DirectoryIterator.cpp  DirectoryIterator.h  FilesystemModule.cpp  FilesystemModule.h
Engine/Modules/ImGuiModule/: CMakeLists.txt  GUIObject.cpp  GUIObject.h  ImGuiModule.cpp  ImGuiModule.h
Engine/Modules/InputModule/: CMakeLists.txt  InputModule.cpp  InputModule.h
Engine/Modules/LoggerModule/: CMakeLists.txt  Logger.cpp  Logger.h
Engine/Modules/LuaScriptModule/: CMakeLists.txt  LuaScriptExecutor.cpp  LuaScriptExecutor.h  LuaScriptModule.cpp  LuaScriptModule.h
Engine/Modules/MemoryModule/: CMakeLists.txt  DoubleStackAllocator.cpp  DoubleStackAllocator.h  GarbageAllocator.cpp  GarbageAllocator.h  PoolAllocator.cpp  PoolAllocator.h
Engine/Modules/ObjectCoreModule/: CMakeLists.txt
Engine/Modules/PhysicsModule/: BulletDebugDrawer.cpp  BulletDebugDrawer.h  CMakeLists.txt  PhysicsModule.cpp  PhysicsModule.h
Engine/Modules/ProjectModule/: CMakeLists.txt  ProjectModule.cpp  ProjectModule.h
Engine/Modules/RenderModule/: CMakeLists.txt  CameraUpdater.cpp  CameraUpdater.h  Events.h  IRenderer.cpp  IRenderer.h  RenderConfig.h  RenderContext.h  RenderEntityTracker.h  RenderListManager.cpp  RenderListManager.h  RenderLocator.h  RenderModule.cpp  RenderModule.h  RenderObjectFactory.cpp  TransformUpdater.h
Engine/Modules/ResourceModule/: BaseResource.cpp  BaseResource.h  CMakeLists.txt  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RWorld.cpp  ResourceCache.cpp  ResourceCache.h  ResourceManager.cpp  ResourceManager.h  ResourceModule.h  ResourceRegistry.cpp  ResourceRegistry.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Texture.cpp  Texture.h
Engine/Modules/ShaderCompilerModule/: CMakeLists.txt  Events.h  ShaderCompiler.cpp  ShaderCompiler.h
Engine/Modules/TimeModule/: CMakeLists.txt  TimeModule.cpp  TimeModule.h  TimeScheduler.cpp  TimeScheduler.h  TimeTimer.cpp  TimeTimer.h
Engine/Modules/WindowModule/: CMakeLists.txt  Events.h  Window.cpp  Window.h  WindowModule.cpp  WindowModule.h
Engine/ProjectBrowser/: CMakeLists.txt  README.md  build_project_browser.py  main.cpp  main.py  recent.json
Engine/ProjectBrowser/SampleProject/: SampleProject.lproj
Engine/ProjectBrowser/src/: app.py
Engine/ProjectBrowser/tests/: test_core.py
Engine/RuntimeApp/: CMakeLists.txt  RuntimeApplication.cpp  RuntimeApplication.h  main.cpp
Engine/Test/: CMakeLists.txt  maingt.cpp
Engine/Test/ObjectCoreModule/: Camera3D_TEST.cpp  Node3D_TEST.cpp  Node_TEST.cpp
Engine/Test/RenderModule/: VulkanRenderer_TEST.cpp
Engine/Test/WindowModule/: Window_TEST.cpp
Engine/Tests/: CMakeLists.txt  maingt.cpp
Engine/Tests/ECSModule/: EntityWorld_Serialization_TEST.cpp  SimulationSnapshot_TEST.cpp
Engine/Tests/JobSystem/: JobHandle_TEST.cpp  JobSystem_TEST.cpp  ParallelFor_TEST.cpp  WorkStealing_TEST.cpp
Engine/Tests/Memory/: AllocatorTests.cpp
Engine/Tests/PhysicsModule/: TestHelpers.cpp  TestHelpers.h
Engine/Tests/ResourceModule/: TestHelpers.cpp  TestHelpers.h
Engine/Tests/ScriptModule/: ProcessCommand_TEST.cpp  ScriptVMTests.cpp
Engine/Tests/TimeModule/: TimeScheduler_TEST.cpp
SDK/: CMakeLists.txt  EngineSDKConfig.cmake.in  version.txt.in
(+1252 files in other folders)
