add_subdirectory(Engine)
add_subdirectory(Editor)
add_subdirectory(RuntimeApp)
add_subdirectory(ProjectBrowser)
add_subdirectory(Tests)

if(TARGET ProjectBrowser)
    if(TARGET ${ENGINE_NAME})
        add_dependencies(${ENGINE_NAME} ProjectBrowser)
    endif()
    if(TARGET ${EDITOR_NAME})
        add_dependencies(${EDITOR_NAME} ProjectBrowser)
    endif()
    if(TARGET ${RUNTIME_NAME})
        add_dependencies(${RUNTIME_NAME} ProjectBrowser)
    endif()
endif()

