find_package(Python3 REQUIRED COMPONENTS Interpreter)

set(PROJECT_BROWSER_TARGET ProjectBrowser)
set(PROJECT_BROWSER_NAME ProjectBrowser)
set(PROJECT_BROWSER_BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR}/pyinstaller)
set(PROJECT_BROWSER_DIST_DIR ${PROJECT_BROWSER_BUILD_DIR}/dist)
set(PROJECT_BROWSER_WORK_DIR ${PROJECT_BROWSER_BUILD_DIR}/build)
set(PROJECT_BROWSER_SPEC_DIR ${PROJECT_BROWSER_BUILD_DIR})
set(PROJECT_BROWSER_STANDALONE ${PROJECT_BROWSER_DIST_DIR}/${PROJECT_BROWSER_NAME}${CMAKE_EXECUTABLE_SUFFIX})
set(PROJECT_BROWSER_RUNTIME_DIR ${CMAKE_BINARY_DIR}/bin)
set(PROJECT_BROWSER_OUTPUT ${PROJECT_BROWSER_RUNTIME_DIR}/${PROJECT_BROWSER_NAME}${CMAKE_EXECUTABLE_SUFFIX})

file(GLOB_RECURSE PROJECT_BROWSER_PY_SOURCES
    ${CMAKE_CURRENT_SOURCE_DIR}/src/*.py
    ${CMAKE_CURRENT_SOURCE_DIR}/tests/*.py
)

set(PROJECT_BROWSER_ASSETS
    ${CMAKE_CURRENT_SOURCE_DIR}/main.py
    ${CMAKE_CURRENT_SOURCE_DIR}/recent.json
)

file(GLOB_RECURSE PROJECT_BROWSER_TEMPLATE_FILES LIST_DIRECTORIES false
    ${CMAKE_CURRENT_SOURCE_DIR}/Templates/*
)

file(GLOB_RECURSE PROJECT_BROWSER_SAMPLE_FILES LIST_DIRECTORIES false
    ${CMAKE_CURRENT_SOURCE_DIR}/SampleProject/*
)

set(PROJECT_BROWSER_OPTIONAL_ASSETS
    ${CMAKE_CURRENT_SOURCE_DIR}/app_icon.png
    ${CMAKE_CURRENT_SOURCE_DIR}/project-browser-dark.png
)

add_custom_command(
    OUTPUT ${PROJECT_BROWSER_STANDALONE}
    COMMAND ${Python3_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/build_project_browser.py
            --root ${CMAKE_CURRENT_SOURCE_DIR}
            --dist ${PROJECT_BROWSER_DIST_DIR}
            --build ${PROJECT_BROWSER_WORK_DIR}
            --spec ${PROJECT_BROWSER_SPEC_DIR}
            --name ${PROJECT_BROWSER_NAME}
    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
    DEPENDS
        ${PROJECT_BROWSER_PY_SOURCES}
        ${PROJECT_BROWSER_ASSETS}
        ${PROJECT_BROWSER_OPTIONAL_ASSETS}
        ${PROJECT_BROWSER_TEMPLATE_FILES}
        ${PROJECT_BROWSER_SAMPLE_FILES}
        ${CMAKE_CURRENT_SOURCE_DIR}/build_project_browser.py
    COMMENT "Building ProjectBrowser standalone executable with PyInstaller")

add_custom_command(
    OUTPUT ${PROJECT_BROWSER_OUTPUT}
    COMMAND ${CMAKE_COMMAND} -E make_directory ${PROJECT_BROWSER_RUNTIME_DIR}
    COMMAND ${CMAKE_COMMAND} -E copy_if_different ${PROJECT_BROWSER_STANDALONE} ${PROJECT_BROWSER_OUTPUT}
    DEPENDS ${PROJECT_BROWSER_STANDALONE}
    COMMENT "Copying ProjectBrowser executable to runtime output directory")

add_custom_target(${PROJECT_BROWSER_TARGET} ALL
    DEPENDS ${PROJECT_BROWSER_OUTPUT})

set(PROJECT_BROWSER_EXECUTABLE ${PROJECT_BROWSER_OUTPUT} CACHE INTERNAL "Built ProjectBrowser executable")

